feat(network): add network layer with Retrofit and Moshi
Implement comprehensive network layer for Pokemon API integration using
Retrofit, OkHttp, and Moshi for JSON serialization.

Key Components:
- RetrofitProvider: Configurable Retrofit instance with EitherNet for
  functional error handling
- PokemonDetailsResponseDto: Complete Pokemon details API model
- SpeciesDetailsResponseDto: Pokemon species data model
- Moshi annotations using @field:Json for proper Kotlin serialization

Features:
- 30-second connection and read timeouts
- Interceptor support for cross-cutting concerns (logging, auth, etc.)
- ApiResultCallAdapterFactory for type-safe API responses
- Flexible Moshi configuration

Architecture Note:
The API layer is currently horizontally sliced (all DTOs and services in
network module). This can be refactored to vertical slicing per feature
(e.g., pokemon-details, pokemon-list) to better adhere to the Interface
Segregation Principle and improve modularity. Each feature would contain
its own API models, services, and data sources.

Dependencies: Retrofit, OkHttp, Moshi, EitherNet

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,4 +26,5 @@ android.compileSdk=36
 android.minSdk=28
 android.targetSdk=36
 kotlin.jvmTarget=17
-base.url=
+base.url=https://pokeapi.co/api/
+api.version=v2
