--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ androidTools = "31.13.1"
 ksp = "2.2.20-2.0.4"
 hilt = "2.57.2"
 hilt-navigation-compose = "1.3.0"
+kotlin-serialization = "2.2.21"
 
 #network
 retrofit = "2.9.0"
@@ -68,6 +69,7 @@ androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-te
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version.ref = "constraintlayout" }
 androidx-compose-material-icons = {group = "androidx.compose.material", name = "material-icons-extended", version.ref = "iconsExtended"}
+
 
 androidx-compose-material3-adaptive-navigation-suite = { group = "androidx.compose.material3", name = "material3-adaptive-navigation-suite" }
 
@@ -149,6 +151,7 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin-serialization" }
 google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 androidx-room = { id = "androidx.room", version.ref = "room" }
@@ -168,10 +171,3 @@ minipokedex-room = { id = "convention.room" }
 minipokedex-android-lint = { id = "convention.android.lint" }
 minipokedex-android-library-jacoco = {id = "convention.android.library.jacoco"}
 minipokedex-android-application-jacoco = {id = "convention.android.application.jacoco"}
-
-
-
-
-
-
-
