--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -44,7 +44,6 @@ iconsExtended = "1.7.8"
 
 appcompat = "1.7.1"
 material = "1.13.0"
-junitJunit = "4.12" # Add a version for lint tools
 accompanist = "0.32.0"
 playServicesLocation = "21.3.0"
 uiToolingPreview = "1.10.2"
@@ -121,7 +120,7 @@ testing-mock-webserver = { module = "com.squareup.okhttp3:mockwebserver", versio
 testing-mockito = { module = "org.mockito:mockito-core", version.ref = "mockito" }
 testing-mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoAndroid" }
 androidx-arch-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "androidx-arch-core-testing" }
-junit = { group = "junit", name = "junit", version.ref = "junitJunit" }
+#junit = { group = "junit", name = "junit", version.ref = "junitJunit" }
 
 #logging
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
